add limitation and reasoning

--- a/investigate-a-dataset-template.ipynb
+++ b/investigate-a-dataset-template.ipynb
@@ -768,6 +768,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### So the average runtime a movie is 106 minutes. Lets visualize it  by graphical approach compare them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
@@ -838,7 +845,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Great ! By the hightogram and box plot diagrams, we can see that there is almost normal distribution for run times of movies around the average of 106."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Research Question 2 : Which year has the highest release of movies?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### I want to know which years has the highest released movies.  I should count the number of movies in each year after groupping the movies by their released year."
    ]
   },
   {
@@ -904,6 +925,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In this plot, we can conclude that year 2014 year has the highest release of movies (700) followed by year 2013 (659) and year 2015 (629)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -966,7 +994,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### So we can conclude both graphically that year 2015 was the year where movies made the highest profit. We are now done with analysing the given dataset.We can  find characteristics of profitable movies. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Research Question 4 : Which genre has the highest number of movies?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To answer this question, we should split genres columns from '|' to have each genre seperately and add them to a column genre. Then we can find value count of each genre and visualize them."
    ]
   },
   {
@@ -1045,6 +1087,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### how does revenue change according to their budget. By makeing  a scatter plot  between 'revenue' and 'budget' , we can find this correlation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
@@ -1085,6 +1134,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "## limitation\n",
+    "Several columns have data seperated by '|' . For better analysis , they should be split from '|' into lists for easy parsing during the exploration phase. This increases the time taken in calculating the result.\n",
+    "\n",
+    "we have many missing value .Dropping rows with missing value may affect overal analysis.\n",
+    "\n",
+    "Budget and revenue column do not have currency unit, different movies from different countries may have different currency unit. So this has importatnt effect on our analysis.\n",
+    "\n",
+    "we are not sure if this database contains completel ,correct and up-to-date data. For example , there may be other factors that can be considered to icrease the profit. So our conclusions are not 100 percent reliable, But it shows us that we have high probability of making high profits if we had similar characteristics.\n",
+    "\n",
     "## Conclusions\n",
     "\n",
     "\n",
@@ -1100,6 +1159,8 @@
     "\n",
     "\n",
     "Genre must be : Action, Adventure, Thriller, Comedy, Drama.\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
