add limitation and reasoning2

--- a/investigate-a-dataset-template.ipynb
+++ b/investigate-a-dataset-template.ipynb
@@ -949,6 +949,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We will be using Line plot for this analysis. Since we want to know the profits of movies for every year therefore we have to sum up all the movies of a particular year"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -967,8 +974,7 @@
     }
    ],
    "source": [
-    "#We will be using Line plot for this analysis\n",
-    "#Since we want to know the profits of movies for every year therefore we have to sum up all the movies of a particular year\n",
+    "\n",
     "\n",
     "\n",
     "profits_year = df_clean.groupby('release_year')['profit_earned'].sum()\n",
@@ -1008,7 +1014,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To answer this question, we should split genres columns from '|' to have each genre seperately and add them to a column genre. Then we can find value count of each genre and visualize them."
+    "#### To answer this question, we should split genres columns from '|' to have each genre seperately and add them to a column genre. Then we can find value count of each genre and visualize them."
    ]
   },
   {
@@ -1083,6 +1089,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### you can  see number of movies for each genre that were sorted from high to low"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Research Question 5: what is the correlation between budget and revenue?"
    ]
   },
@@ -1090,7 +1103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### how does revenue change according to their budget. By makeing  a scatter plot  between 'revenue' and 'budget' , we can find this correlation."
+    "#### how does revenue change according to their budget? By makeing  a scatter plot  between 'revenue' and 'budget' , we can find this correlation."
    ]
   },
   {
